--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,8 @@
 {
-    "name": "Switch White & Dark Mode Twitter",
+    "name": "Switch White & Dark Twitter",
     "manifest_version": 2,
     "version": "1.0",
-    "description": "Automatically switch between dark and white Twitter modes depending on the current Windows theme.",
-    "icons": {
-        "48": "icons/border-48.png"
-    },
+    "description": "Automatically switch between dark and white Twitter themes depending on the current Windows theme.",
     "content_scripts": [
         {
         "matches": [
@@ -14,9 +11,11 @@
         "js": [
             "main.js"
         ],
-        "run_at": "document_start",
-		"all_frames": true
+        "run_at": "document_start"
         }
+    ],
+    "permissions": [
+        "*://twitter.com/*",
+        "cookies"
     ]
 }
-  
